<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/yelll"
    tools:context=".StartMenu">

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="20sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="#D50000"
            android:onClick="StartSim"
            android:text="@string/start"
            android:textSize="18sp" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#AEEA00"
            android:onClick="StopSim"
            android:text="@string/stop"
            android:textSize="18sp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF6D00"
            android:onClick="ResetSim"
            android:text="@string/reset"
            android:textSize="18sp" />

        <Button
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BFA5"
            android:onClick="OpenSim"
            android:text="@string/open"
            android:textSize="18sp" />


    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0091EA"
            android:text="@string/connect"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="No connection"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="118dp"
            android:layout_height="103dp"
            android:src="@drawable/heartbeating" />

        <TextView
            android:id="@+id/beat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/beat"
            android:textSize="60sp" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back">

        <ImageView
            android:layout_width="119dp"
            android:layout_height="110dp"
            android:padding="10dp"
            android:src="@drawable/pressure" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/systolic_pressure"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/sysstolic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="40sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diastolic_pressure"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/diastolic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="40sp" />


            </TableRow>

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:background="@drawable/back">

        <ImageView
            android:layout_width="118dp"
            android:layout_height="111dp"
            android:src="@drawable/lungss" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/krona_one"
                    android:gravity="center"
                    android:text="@string/oddech_w_na_minute"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/breath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="50sp" />

            </TableRow>

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:background="@drawable/back">

        <ImageView
            android:layout_width="119dp"
            android:layout_height="match_parent"
            android:src="@drawable/finga" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="@string/nawr_t_kapilarny"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/capilar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="50sp" />

            </TableRow>

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="CHODZI?"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/walking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="-"
                    android:textSize="36sp" />
            </TableRow>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="SPEŁNIA POLECENIA?"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="-"
                    android:textSize="36sp" />
            </TableRow>

        </LinearLayout>

    </TableRow>


</LinearLayout>
</ScrollView>